

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:orientation="horizontal"
    >



    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_width="wrap_content"
        android:hint="@string/editText"
        android:inputType="text"
        android:layout_gravity="bottom"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="58dp"
        android:textSize="25dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_send"
        android:onClick="sendMsg"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="108dp" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:hint="@string/editText3"
        android:inputType="number"
        android:layout_gravity="bottom"
        android:layout_marginTop="48dp"
        android:layout_below="@+id/editText"
        android:layout_centerHorizontal="true"
        android:textSize="25dp"
        android:numeric="integer" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editText4"
        android:layout_width="wrap_content"
        android:hint="@string/editText4"
        android:inputType="text"
        android:layout_gravity="bottom"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:textSize="25dp" />


</RelativeLayout>
