
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HomeScreen"
    android:orientation="horizontal"
    >



    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:hint="@string/editText1"
        android:layout_gravity="bottom"
        android:layout_marginTop="83dp"
        android:textSize="25dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:inputType="number"
        android:numeric="integer" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button_next"
        android:onClick="sendNext"
        android:layout_gravity="bottom"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true" />

    <EditText
        android:layout_height="wrap_content"
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:hint="@string/editText2"
        android:inputType="number"
        android:layout_gravity="bottom"
        android:textSize="25dp"
        android:numeric="integer"
        android:layout_below="@+id/editText1"
        android:layout_centerHorizontal="true" />


</RelativeLayout>
